crates/cli/tests/snapshots/snapshot_tests__json_re_export_variant.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: "json_str.replace(&format!(\"\\\"version\\\": \\\"{}\\\"\", env!(\"CARGO_PKG_VERSION\")),\n\"\\\"version\\\": \\\"[VERSION]\\\"\",)"
---
{
  "schema_version": 1,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 1,
  "unused_files": [],
  "unused_exports": [
    {
      "path": "src/index.ts",
      "export_name": "reExportedFn",
      "is_type_only": false,
      "line": 1,
      "col": 0,
      "span_start": 0,
      "is_re_export": true
    }
  ],
  "unused_types": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_optional_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "circular_dependencies": []
}
