crates/cli/tests/snapshots/snapshot_tests__json_unresolved_imports_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [
    {
      "path": "/project/src/app.ts",
      "specifier": "./missing-module",
      "line": 3,
      "col": 0
    }
  ],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "schema_version": "1.0.0",
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 1
}
