crates/cli/tests/snapshots/snapshot_tests__json_workspace_deps.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "schema_version": 2,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 2,
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [],
  "unused_dependencies": [
    {
      "package_name": "lodash",
      "location": "dependencies",
      "path": "packages/ui/package.json"
    }
  ],
  "unused_dev_dependencies": [
    {
      "package_name": "jest",
      "location": "devDependencies",
      "path": "packages/ui/package.json"
    }
  ],
  "unused_optional_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "circular_dependencies": []
}
