crates/cli/tests/snapshots/snapshot_tests__pr_comment_github.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: output
---
<!-- fallow-id: fallow-results -->
### Fallow codebase report

**Quality gate failed**

Found **29** findings: Dead code 13, Dependencies 12, Architecture 2, Policy 2.

<details>
<summary>Dead code (13)</summary>

| Severity | Rule | Location | Description |
| --- | --- | --- | --- |
| minor | `fallow/unused-svelte-event` | `src/Child.svelte`:6 | event \`dead\` is dispatched by component \`Child\` but listened to nowhere in the project \(remove it or listen for it\) |
| major | `fallow/unresolved-import` | `src/app.ts`:3 | Import './missing-module' could not be resolved |
| major | `fallow/duplicate-export` | `src/config.ts`:15 | Export 'Config' appears in multiple modules |
| major | `fallow/unused-file` | `src/dead.ts`:1 | File is not reachable from any entry point |
| major | `fallow/unused-enum-member` | `src/enums.ts`:8 | Enum member 'Status.Deprecated' is never referenced |
| major | `fallow/unused-class-member` | `src/service.ts`:42 | Class member 'UserService.legacyMethod' is never referenced |
| minor | `fallow/unused-store-member` | `src/stores/counter.ts`:24 | Store member 'useCounterStore.legacyAction' is never referenced |
| major | `fallow/unused-type` | `src/types.ts`:5 | Type export 'OldType' is never imported by other modules |
| major | `fallow/duplicate-export` | `src/types.ts`:30 | Export 'Config' appears in multiple modules |
| minor | `fallow/unprovided-inject` | `src/useTheme.ts`:5 | inject\(\`THEME\_KEY\`\) has no matching provide\(\`THEME\_KEY\`\) in this project; at runtime it returns undefined \(provide the key or remove this inject\) |
| minor | `fallow/unused-component-input` | `src/user-card.component.ts`:12 | input \`variant\` is declared but referenced nowhere in component \`UserCardComponent\` \(remove it or use it\) |
| minor | `fallow/unused-component-output` | `src/user-card.component.ts`:15 | output \`selected\` is declared but emitted nowhere in component \`UserCardComponent\` \(remove it or emit it\) |
| major | `fallow/unused-export` | `src/utils.ts`:10 | Export 'helperFn' is never imported by other modules |

</details>

<details>
<summary>Dependencies (12)</summary>

| Severity | Rule | Location | Description |
| --- | --- | --- | --- |
| major | `fallow/misconfigured-dependency-override` | `package.json`:3 | Override \`@types/react@\<\<18\` -\> \`18.0.0\` is malformed: override key cannot be parsed |
| major | `fallow/unused-dependency` | `package.json`:5 | Package 'lodash' is in dependencies but never imported |
| minor | `fallow/unused-dev-dependency` | `package.json`:5 | Package 'jest' is in devDependencies but never imported |
| minor | `fallow/unused-optional-dependency` | `package.json`:5 | Package 'fsevents' is in optionalDependencies but never imported |
| minor | `fallow/type-only-dependency` | `package.json`:8 | Package 'zod' is only imported via type-only imports \(consider moving to devDependencies\) |
| minor | `fallow/test-only-dependency` | `package.json`:12 | Package 'msw' is only imported by test files \(consider moving to devDependencies\) |
| major | `fallow/unresolved-catalog-reference` | `packages/app/package.json`:14 | Package 'old-react' is referenced via \`catalog:react17\` but catalog 'react17' does not declare it; \`pnpm install\` will fail \(available in: react18\) |
| minor | `fallow/unused-catalog-entry` | `pnpm-workspace.yaml`:6 | Catalog entry 'is-even' is not referenced by any workspace package |
| minor | `fallow/unused-dependency-override` | `pnpm-workspace.yaml`:9 | Override \`axios\` forces version \`^1.6.0\` but \`axios\` is not declared by any workspace package or resolved in the lockfile \(may target a transitive dependency; pnpm install --frozen-lockfile is the ground truth\) |
| minor | `fallow/empty-catalog-group` | `pnpm-workspace.yaml`:10 | Catalog group 'react17' has no entries |
| minor | `fallow/unused-catalog-entry` | `pnpm-workspace.yaml`:12 | Catalog entry 'old-thing' \(catalog 'legacy'\) is not referenced by any workspace package |
| major | `fallow/unlisted-dependency` | `src/cli.ts`:2 | Package 'chalk' is imported but not listed in package.json |

</details>

<details>
<summary>Architecture (2)</summary>

| Severity | Rule | Location | Description |
| --- | --- | --- | --- |
| major | `fallow/circular-dependency` | `src/a.ts`:3 | Circular dependency: src/a.ts → src/b.ts |
| minor | `fallow/re-export-cycle` | `src/api/index.ts`:1 | Re-export cycle: src/api/index.ts \<-\> src/api/internal/index.ts |

</details>

<details>
<summary>Policy (2)</summary>

| Severity | Rule | Location | Description |
| --- | --- | --- | --- |
| minor | `fallow/mixed-client-server-barrel` | `app/components/index.ts`:2 | Barrel re-exports both a "use client" module \(\`./Button\`\) and a server-only module \(\`./fetchUser\`\); one import drags the other's directive across the boundary |
| minor | `fallow/invalid-client-export` | `app/page.tsx`:3 | Export \`metadata\` is not allowed in a "use client" file \(Next.js server-only / route-config name\) |

</details>


Generated by fallow.
